# fluvio-demo-apps-rust

./: .gitignore  Cargo.toml  MYSQL-COMMANDS.MD  README.MD  README.md
.github/workflows/: ci.yml
cdc-consumer/: Cargo.toml
cdc-consumer/src/: main.rs
cdc-consumer/src/cli/: mod.rs  profile.rs
cdc-consumer/src/fluvio/: consumer.rs  mod.rs
cdc-consumer/src/mysql_manager/: mod.rs  mysql_manager.rs
cdc-consumer/src/store/: mod.rs  offset_store.rs
cdc-messages/: Cargo.toml
cdc-messages/src/: bn_message.rs  flv_message.rs  lib.rs  operations.rs  row_ops.rs
cdc-mysql/: Cargo.toml  MYSQL_COMMANDS.md  README.md  cdc.sh  consumer_profile.toml  producer_profile.toml  redo.sh
cdc-mysql/docker/: clean.sh  install.sh
cdc-mysql/scripts/: README.MD  check-mysql.sh  cleanup-all.sh  cleanup.sh  create-topic.sh  mysql-send-cmds.sh  mysql-validate-result.sh  run-consumer.sh  run-producer.sh  run-test.sh  setup-all.sh  setup.sh  wait-mysql-consumer.sh  wait-mysql-producer.sh  wait-mysql.sh
cdc-mysql/scripts/helpers/: cleanup.sh  create-topic.sh  mysql-send-cmds.sh  mysql-validate-result.sh  run-consumer.sh  run-producer.sh  setup.sh  wait-mysql-consumer.sh  wait-mysql-producer.sh  wait-mysql.sh
cdc-mysql/src/: error.rs  lib.rs  util.rs
cdc-mysql/src/consumer/: mod.rs  mysql_manager.rs  offset_store.rs  profile.rs
cdc-mysql/src/messages/: bn_message.rs
cdc-mysql/src/producer/: cli.rs  db_store.rs  fluvio_manager.rs  mod.rs  mysql.rs  profile.rs
cdc-mysql/src/producer/binlog_manager/: binlog_file.rs  binlog_index_file.rs  binlog_parser.rs  binlog_resume.rs  local_store.rs  manager.rs  mod.rs  query_parser.rs
cdc-mysql/test_files/: consumer_profile_full.toml  consumer_profile_min.toml  producer_profile_full.toml  producer_profile_min.toml  producer_script.sql  select_script.sql
cdc-producer/: Cargo.toml
cdc-producer/src/: main.rs
cdc-producer/src/binlog_manager/: binlog_file.rs  binlog_index_file.rs  binlog_manager.rs  binlog_parser.rs  binlog_resume.rs  mod.rs
cdc-producer/src/cli/: mod.rs  profile.rs
cdc-producer/src/fluvio_manager/: fluvio_manager.rs  fluvio_ops.rs  mod.rs
cdc-producer/src/mysql/: mod.rs  mysql_ops.rs
cdc-producer/src/store/: db_store.rs  mod.rs
docker/: README.MD  install.sh
my-java-lib-blog-post/: Cargo.toml  Makefile  build.rs  settings.gradle
my-java-lib-blog-post/lib/: .gitignore  build.gradle
my-java-lib-blog-post/lib/src/main/java/my/java/lib/: .gitignore  Library.java  NativeUtils.java
my-java-lib-blog-post/lib/src/test/java/my/java/lib/: FooTest.java  LibraryTest.java
my-python-lib-blog-post/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  setup.py  simple.py
my-python-lib-blog-post/src/: glue.rs.in
robot-assistant/: Makefile.toml  README.md
robot-assistant/html/: assistant.css  index.html
robot-assistant/html/scripts/: assistant.js  reconnecting-socket.js
robot-assistant/msg/: Cargo.toml
robot-assistant/msg/src/: lib.rs
robot-assistant/server/: Cargo.toml  robot.yaml
robot-assistant/server/src/: main.rs
robot-assistant/wasm/: Cargo.toml  README.md
robot-assistant/wasm/src/: lib.rs
