[package]
name = "cdc-consumer"
version = "0.1.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2018"

[dependencies]
mysql = "18.2.0"
crossbeam-channel = "0.4.2"
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"
dirs = "2.0.2"
ctrlc = "3.1.4"
bigdecimal = "0.1.2"
http = "0.2.1"
flv-client = "3.1.0"
flv-future-aio = "2.2.1"
async-std = "1.6.0"
structopt = { version = "0.3", default-features = false }
futures = { version = "0.3.4", features = ['async-await'] }
cdc-messages = { path="../cdc-messages" }

