[package]
name = "cdc-messages"
version = "0.1.0"
edition = "2018"
authors = ["Fluvio Contributors <team@fluvio.io>"]
license = "Apache-2.0"
repository = "https://github.com/infinyon/rust-demo-apps"
description = "Fluvio Consumer API example"

[lib]
name = "cdc_messages"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"
bigdecimal = { version="^0.1.2", features=["serde"] }
chrono = "0.4.11"
http = "0.2.1"