[package]
name = "cdc-producer"
version = "0.1.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2018"

[dependencies]
mysql = "18.2.0"
crossbeam-channel = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"
dirs = "2.0.2"
toml = "0.5.6"
ctrlc = "3.1.4"
flv-client = "3.1.0"
flv-future-aio = "2.2.1"
async-std = "1.6.0"
structopt = { version = "0.3", default-features = false }
cdc-messages = { path="../cdc-messages" }
mysql_binlog = { git = "https://github.com/infinyon/rust-mysql-binlog" }